# orbweaver-mono

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Justfile  README.md  SETUP.md  justfile  nuxt.config.ts  orbweaver-compose.yml  orbweaver.code-workspace  package.json  pnpm-lock.yaml  release.config.js  setup.sh  sprints.md  tailwind.config.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  golangci.yaml
.specify/: feature.json
app/: app.vue
backend/: pyproject.toml  seed_review.py
device-discovery/: README.md  pyproject.toml
docker/: .env  .env.example  Dockerfile.agent  Dockerfile.frontend  Dockerfile.orbweaver  agent.yml  docker-compose.yml  netbox-cleanup.py  policy-example.yaml
docs/: cable-examples.md  cable-resolution.md  seed-examples.md  upstream-issues.md
extensions/: app.py  diode_translate.py  (+3 more)
orbweaver/: app.py  diode_translate.py  main.py  netbox_ops.py  patches.py  pyproject.toml
orbweaver/cables/: __init__.py  ingest.py  models.py  normalize.py  resolve.py
orbweaver/collectors/: aruba_aoscx.py  base.py  cisco_ios.py  napalm_collector.py  napalm_helpers.py  registry.py
orbweaver/models/: common.py
orbweaver/review/: discover.py  models.py  rebuild.py  store.py
orbweaver/seed/: loader.py  models.py
orbweaver/tests/: __init__.py  conftest.py  test_cables_ingest.py  test_cables_integration.py  test_cables_normalize.py  test_cables_resolve.py  test_cisco_ios_interface_types.py  test_review_cables.py  test_seed_loader.py  test_seed_models.py
(+305 files in other folders)
