[project]
name = "orbweaver"
version = "0.3.3"
description = "orbweaver — vendor collector framework and review workflow for NetBox Discovery"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "Triomat" }
]

dependencies = [
    # Upstream backend (device-discovery) must be installed separately from backend/
    "dacite~=1.8",
    "pynetbox~=7.3",
    "requests~=2.31",
]

[project.optional-dependencies]
dev = ["ruff"]
test = ["coverage", "pytest", "pytest-cov==6.0.0"]

[project.scripts]
orbweaver = "orbweaver.main:main"

[tool.setuptools]
package-dir = {"" = ".."}
packages = [
    "orbweaver",
    "orbweaver.collectors",
    "orbweaver.models",
    "orbweaver.review",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 140

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["C", "D", "E", "F", "I", "R", "UP", "W"]
ignore = ["F401", "D203", "D212", "D400", "D401", "D404", "RET504"]
